[package]
name = "aether-gp"
version = "1.0.1"
edition = "2021"
authors = ["Physis-Research"]
description = "Regime-aware symbolic regression engine for market research"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Physis-Research/AETHER"
homepage = "https://github.com/Physis-Research/AETHER"
documentation = "https://docs.rs/aether-gp"
keywords = ["quant", "trading", "genetic-programming", "backtesting", "time-series"]
categories = ["science", "simulation", "command-line-utilities"]

[[bin]]
name = "aether"
path = "src/main.rs"

[lib]
name = "aether"
path = "src/lib.rs"

[dependencies]
rayon = "1.11.0"
ndarray = { version = "0.17.1", features = ["rayon", "serde"] }
rand = "0.9.0"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
ureq = { version = "2.12.1", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
clap = { version = "4.5.53", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
